--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,9 @@
     "require": {
         "php": "^8.0",
         "fruitcake/laravel-cors": "^2.0.5",
+        "fx3costa/laravelchartjs": "^3.0",
         "guzzlehttp/guzzle": "^7.2",
+        "illuminate/support": "*",
         "laravel/framework": "^9.0",
         "laravel/jetstream": "^3.0",
         "laravel/sanctum": "^2.14",
